# mvg_dist_match

./: .gitmodules
src/: CMakeLists.txt
src/cmakeFindModules/: Findzmqpp.cmake
src/nonFree/: CMakeLists.txt
src/nonFree/SiftGPU/: CMakeLists.txt  README.md  SIFTGPU_describer.hpp  batchSift.sh  batchSift_glsl.sh  dirmatch.py  makefile  time_consume.csv  time_consume_glsl.csv  time_glsl.csv  time_ubuntu.csv
src/nonFree/SiftGPU/data/: 1600.jpg.sift  1600.sift  640-1.jpg.sift  640-2.jpg.sift  640-3.jpg.sift  640-4.jpg.sift  640-5.jpg.sift  800-1.jpg.sift  800-2.jpg.sift  800-3.jpg.sift  800-4.jpg.sift  test  test.jpg.sift
src/nonFree/SiftGPU/src/SiftGPU/: CLTexImage.cpp  CLTexImage.h  ProgramCL.cpp  PyramidCL.cpp  SiftFileLoader.cpp  SiftFileLoader.h
src/nonFree/SiftGPU/src/TestWin/: BasicTestWin.cpp  GLTransform.h  MatchConsole.cpp  MatchConsole.h  SiftAndMatch.cpp  SiftAndMatch.h  SiftConsole.cpp  SiftConsole.h
src/nonFree/SiftGPU/src/cmake/: FindOpenCL.cmake
src/openMVG/image/: image_container.hpp
src/openMVG/matching/: CMakeLists.txt  dis_cmds.proto  dist_match_cmd.hpp  match_brute_force_gpu.hpp  match_task.hpp  matcher_type.hpp  regions_matcher.cpp
src/openMVG/sfm/pipelines/: sfm_regions_provider.hpp
src/software/SfM/: CMakeLists.txt  main_ComputeFeatures.cpp  main_ComputeMatches.cpp  openMVG_dist_ComputeMatches.cpp
